--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "sys/whisper.cpp"]
 	path = sys/whisper.cpp
-	url = https://github.com/ggerganov/whisper.cpp
+	url = https://github.com/xujiahua/whisper.cpp
+	branch = v1.6.2-hipblas
